--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,8 @@ name = "pyskim"
 crate-type = ["cdylib"]
 
 [dependencies]
-skim = "0.6.6"
+#skim = "0.6.6"
+skim = { git = "https://github.com/rdeaton/skim.git" }
 
 [dependencies.pyo3]
 version = "0.7.0"
